aqui añadi la opcion de el gif en el header
PERO YA PONGANSE A TRABAJAR... ;-;

--- a/alv todo.html
+++ b/alv todo.html
@@ -38,12 +38,11 @@
             height: 100%;
             z-index: 1;
         }
-        .foreground-image {
+        .gif-overlay {
             position: absolute;
-            top: 40%;
-            left: 50%;
+            top: 18%;
+            left: 12%;
             transform: translate(-50%, -50%);
-             z-index: 2;
         }
     
         nav {
@@ -71,8 +70,8 @@
 </head>  
 <body>
     <header>
-        <img src="E:/FNF STRESS OUT/stress out web/Nano.png" alt="Logo de mi sitio web" class="background-image">
-        <img src="E:/FNF STRESS OUT/stress out web/funky.png" alt="Logo de mi sitio web" class="foreground-image">
+        <img src="E:/FNF STRESS OUT/stress out web/nano-r.png" alt="Logo de mi sitio web" class="background-image">
+        <img src="E:/FNF STRESS OUT/stress out web/sin-fondo.gif" alt="Logo de mi sitio web" class="gif-overlay">
         <h1></h1>
     </header>
     <nav>
