--- a/stress out shit/STRESS-OUT-CSS.html
+++ b/stress out shit/STRESS-OUT-CSS.html
@@ -8,8 +8,8 @@
 </head>  
 <body>
     <header>
-        <img src="E:/FNF STRESS OUT/stress out web/nano-r.png" alt="Logo de mi sitio web" class="background-image">
-        <img src="E:/FNF STRESS OUT/stress out web/sin-fondo.gif" alt="Logo de mi sitio web" class="gif-overlay">
+       <img src="C:/Users/PRINCIPAL/Documents/stress out shit/img/nano-r.png"  alt="Logo de mi sitio web" class="background-image">
+       <img src="C:/Users/PRINCIPAL/Documents/stress out shit/img/sin-fondo.gif" alt="Logo de mi sitio web" class="gif-overlay">
         <h1></h1>
     </header>
     <nav>
