--- a/stress out shit/STRESS-OUT-CSS.html
+++ b/stress out shit/STRESS-OUT-CSS.html
@@ -23,7 +23,7 @@
         <h2>About this mod</h2>
         <p class="glow-text"><strong><span>Don't pressure anyone, or pay the consequences...</span></strong></p>
         <p><strong>Nano is a 16-year old guy who has an ordinary life like any person.</strong></p>
-        <p><strong>Only that he is something different from the others...</strong></p>
+        <p><strong>he is something different from the others...</strong></p>
         <p><strong>He suffers from stress and anxiety problems...</strong></p>
         <p class="stress-text"><strong>STRESS</strong></p>
     </main>
