--- a/stress out shit/stress out shit/local.html
+++ b/stress out shit/stress out shit/local.html
@@ -22,17 +22,17 @@
 
      <nav class="sticky-menu">
         <a href="STRESS-OUT-CSS.html">Inicio</a>
-        <a href="preview.html">Preview y mas</a>
-        <a href="local.html">Juego Local</a>
+        <a href="preview.html">Canciones</a>
+        <a href="local.html">Preview</a>
         <a href="STRESS OUT 2.html">Links de descargas</a>
         <a href="soporte.html">Soporte</a>
     </nav>
     <main>
-        <h2>Juego Local</h2>
-        <p><strong>Bienvenido al apartado del juego local...</strong></p>
+        <h2>Demo</h2>
+        <p><strong>Bienvenido al apartado de la prevista a una cancion...</strong></p>
         <p class="stress-text"><strong>usa auriculares para brindarte una mejor experiencia :)</strong></p>
 
-        <iframe src="PsychEngine.exe" width="100%" height="600px" frameborder="0"></iframe>
+        <iframe src="vidios/NMI.mp4" width="100%" height="600px" frameborder="0"></iframe>
 
     </main>
     <footer>
@@ -40,6 +40,7 @@
         <a href="https://open.spotify.com/intl-es/artist/5z0WEgFStXw8usxtg6pFQZ"><i class="fab fa-spotify"></i></a>
         <a href="https://www.instagram.com/lxst_fxll_oficial/"><i class="fab fa-instagram"></i></a>
         <a href="https://discord.com/channels/1246919064753012907/1246919065298145292"><i class="fab fa-discord"></i></a>
+        <a href="https://github.com/NanoLmao/STRESS-OUT"><i class="fab fa-github"></i></a>
 
 
         <p><b>© 2024 FRIDAY NIGHT FUNKIN: STRESS OUT. All Rights Reserved.</b></p>
