--- a/stress out shit/stress out shit/STRESS OUT 2.html
+++ b/stress out shit/stress out shit/STRESS OUT 2.html
@@ -30,8 +30,8 @@
     </header>
     <nav class="sticky-menu">
         <a href="STRESS-OUT-CSS.html">Inicio</a>
-        <a href="preview.html">Preview y mas</a>
-        <a href="local.html">Juego Local</a>
+        <a href="preview.html">Canciones</a>
+        <a href="local.html">Preview</a>
         <a href="STRESS OUT 2.html">Links de descargas</a>
         <a href="soporte.html">Soporte</a>
     </nav>
@@ -49,6 +49,8 @@
         <a href="https://open.spotify.com/intl-es/artist/5z0WEgFStXw8usxtg6pFQZ"><i class="fab fa-spotify"></i></a>
         <a href="https://www.instagram.com/lxst_fxll_oficial/"><i class="fab fa-instagram"></i></a>
         <a href="https://discord.com/channels/1246919064753012907/1246919065298145292"><i class="fab fa-discord"></i></a>
+        <a href="https://github.com/NanoLmao/STRESS-OUT"><i class="fab fa-github"></i></a>
+
 
 
         <p><b>© 2024 FRIDAY NIGHT FUNKIN: STRESS OUT. All Rights Reserved.</b></p>
