--- a/stress out shit/stress out shit/preview.html
+++ b/stress out shit/stress out shit/preview.html
@@ -22,16 +22,16 @@
 
      <nav class="sticky-menu">
         <a href="STRESS-OUT-CSS.html">Inicio</a>
-        <a href="preview.html">Preview y mas</a>
-        <a href="local.html">Juego Local</a>
+        <a href="preview.html">Canciones</a>
+        <a href="local.html">Preview</a>
         <a href="STRESS OUT 2.html">Links de descargas</a>
         <a href="soporte.html">Soporte</a>
 
     </nav>
     <main>
-        <h2>Previews, modelos y mas</h2>
-        <p><strong>Bienvenido al apartado de previews y mas...</strong></p>
-        <p><strong>por el momento, solo voy a subir el soundtrack.</strong></p>
+        <h2>Soundtrack</h2>
+        <p><strong>Bienvenido al apartado del soundtrack oficial...</strong></p>
+        <p><strong>la banda sonora del mod fue compuesta solo por LXST FXLL.</strong></p>
         <p class="stress-text"><strong>ESPERO LES GUSTE :)</strong></p>
 
 
@@ -58,6 +58,8 @@
     <a href="https://open.spotify.com/intl-es/artist/5z0WEgFStXw8usxtg6pFQZ"><i class="fab fa-spotify"></i></a>
     <a href="https://www.instagram.com/lxst_fxll_oficial/"><i class="fab fa-instagram"></i></a>
     <a href="https://discord.com/channels/1246919064753012907/1246919065298145292"><i class="fab fa-discord"></i></a>
+    <a href="https://github.com/NanoLmao/STRESS-OUT"><i class="fab fa-github"></i></a>
+
     <p><b>© 2024 FRIDAY NIGHT FUNKIN: STRESS OUT. All Rights Reserved.</b></p>
 </footer>
 <script src="sticky-menu-JS"></script>
